more url updates

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: Caviar
       <p>
       {{ post.content | split:'<!--more-->' | first }}
       </p>
-      <p><a href="{{ post.url }}">Read more...</a></p>
+      <p><a href="{{ site.url }}{{ post.url }}">Read more...</a></p>
       {% else %}
       <p>{{ post.content }}</p>
 
