--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Caviar
 
     <li>
       <h2>
-      <a href="{{ post.url }}">{{ post.title }}</a>
+      <a href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
 	  </h2>
       {% if post.content contains '<!--more-->' %}
       <p>
